[package]
name = "mineroute"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"

tokio = { version = "0.2", features = ["dns", "tcp", "full"] }
tokio-util = "0.2"
futures = "0.3"
futures-util = "0.3"
bytes = "0.5"
deflate = "0.8"
inflate = "0.4"

serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
minecraft-chat = "0.1"
